- Se pluraliza el resto de las rutas, se hacen cambios sobre migrate por limitacion de unique en string de mysql y se hacen arreglos generales en la documentacion de swagger
